Add global memory mode management
